--- a/CRMSysteUI/Views/_ViewImports.cshtml
+++ b/CRMSysteUI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using CRMSysteUI
-@using CRMSysteUI.Models
+﻿@using CRMSystemUI
+@using CRMSystemUI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
