--- a/CRMSysteUI/Views/Customer/Index.cshtml
+++ b/CRMSysteUI/Views/Customer/Index.cshtml
@@ -4,7 +4,11 @@
 @model List<CustomerDto>
 <div class="container mt-4">
     <h2 class="mb-3">Customer Management</h2>
-
+    <div class="d-flex justify-content-end mb-3">
+        <form method="post" asp-controller="Login" asp-action="Logout">
+            <button type="submit" class="btn btn-outline-danger">Logout</button>
+        </form>
+    </div>
     <div class="row mb-3">
         <div class="col-md-4">
             <input type="text" id="searchInput" class="form-control" placeholder="Search by name...">
