--- a/CRMSysteUI/Views/Login/Index.cshtml
+++ b/CRMSysteUI/Views/Login/Index.cshtml
@@ -22,22 +22,26 @@
                         <div class="mb-3">
                             <label asp-for="@Model.Username" class="form-label">Username</label>
                             <input asp-for="@Model.Username" class="form-control" placeholder="Enter your username">
-                            <span asp-validation-for="@Model.Username" class="text-danger"></span>
+                            <span class="text-danger" asp-validation-for="@Model.Username" ></span>
+
                         </div>
 
                         <div class="mb-3">
                             <label asp-for="@Model.Password" class="form-label">Password</label>
                             <input asp-for="@Model.Password" type="password" class="form-control" placeholder="Enter your password">
-                            <span asp-validation-for="@Model.Password" class="text-danger"></span>
+                            <span class="text-danger" asp-validation-for="@Model.Password" ></span>
                         </div>
-
-                        <button type="submit" class="btn btn-primary w-100">Login</button>
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="btn btn-primary w-50">Login</button>  
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
