--- a/CRMSysteUI/Views/Customer/Search.cshtml
+++ b/CRMSysteUI/Views/Customer/Search.cshtml
@@ -12,7 +12,7 @@
     <div class="row mb-3">
         <div class="col-md-4">
             <form method="get" asp-action="Search" asp-controller="Customer">
-                    <input type="text" id="searchInput" class="form-control" placeholder="Search by Customer..." name="name">
+                    <input type="text" id="searchInput" class="form-control" placeholder="Search by Customer...">
             </form>
         </div>
         <form method="get" asp-action="SearchRegion" asp-controller="Customer">
@@ -29,8 +29,9 @@
                 <button class="btn btn-primary" type="submit">Filter</button>
             </div>
         </form>
+        
     </div>
-   
+
     <table id="customerTable" class="table table-striped table-bordered">
         <thead>
             <tr>
@@ -45,23 +46,27 @@
             </tr>
         </thead>
         <tbody>
-            @if(Model==null||!Model.Any()){
-                <p>No Customers found</p>
-            }else
-            @foreach (var customer in Model)
+            @if (Model == null || !Model.Any())
             {
-                <tr>
-                    <td>@customer.CustomerID</td>
-                    <td>@customer.FirstName</td>
-                    <td>@customer.LastName</td>
-                    <td>@customer.Email</td>
-                    <td>@customer.Region</td>
-                    <td>@customer.RegistrationDate</td>
-                    <td><a href="/Customer/DeleteCustomer/@customer.CustomerID" class="btn btn-outline-danger">Sil</a></td>
-                    <td><a href="/Customer/UpdateCustomer/@customer.CustomerID" class="btn btn-outline-success">Güncelle</a></td>
-                </tr>
+                <p>No Customers found</p>
             }
+            else
+                @foreach (var customer in Model)
+                {
+                    <tr>
+                        <td>@customer.CustomerID</td>
+                        <td>@customer.FirstName</td>
+                        <td>@customer.LastName</td>
+                        <td>@customer.Email</td>
+                        <td>@customer.Region</td>
+                        <td>@customer.RegistrationDate</td>
+                        <td><a href="/Customer/DeleteCustomer/@customer.CustomerID" class="btn btn-outline-danger">Sil</a></td>
+                        <td><a href="/Customer/UpdateCustomer/@customer.CustomerID" class="btn btn-outline-success">Güncelle</a></td>
+                    </tr>
+                }
         </tbody>
     </table>
-    <a href="Customer/CreateCustomer" class="btn btn-outline-primary">Yeni Müşteri Girişi</a>
+    <a href="/CreateCustomer" class="btn btn-outline-primary">Yeni Müşteri Girişi</a>
 </div>
+
+
