--- a/CRMSysteUI/Views/Customer/Index.cshtml
+++ b/CRMSysteUI/Views/Customer/Index.cshtml
@@ -4,33 +4,33 @@
 @model List<CustomerDto>
 <div class="container mt-4">
     <h2 class="mb-3">Customer Management</h2>
+     <div class="row mb-4">
     <div class="d-flex justify-content-end mb-3">
         <form method="post" asp-controller="Login" asp-action="Logout">
             <button type="submit" class="btn btn-outline-danger">Logout</button>
         </form>
     </div>
-    <div class="row mb-3">
-        <div class="col-md-4">
-            <form method="get" asp-action="Search" asp-controller="Customer">
-                    <input type="text" id="searchInput" class="form-control" placeholder="Search by Customer..." name="name">
-            </form>
-        </div>
-        <form method="get" asp-action="SearchRegion" asp-controller="Customer">
+        <div class="row mb-2">
             <div class="col-md-4">
-                <select id="region" class="form-control" name="region">
-                    <option value="">All Regions</option>
-                    @foreach (var region in Model.Select(c => c.Region).Distinct())
-                    {
-                        <option value="@region">@region</option>
-                    }
-                </select>
+                <form method="get" asp-action="Search" asp-controller="Customer" class="d-flex">
+                    <input type="text" id="searchInput" class="form-control me-2" placeholder="Search by Customer..." name="name"><br />
+                    <button class="btn btn-primary" type="submit">Search</button>
+                </form> 
             </div>
-            <div class="col mb-3">
-                <button class="btn btn-primary" type="submit">Filter</button>
+            <div class="col-md-4">
+                <form method="get" asp-action="SearchRegion" asp-controller="Customer" class="d-flex">
+                    <select id="region" class="form-control me-2" name="region">
+                        <option value="">All Regions</option>
+                        @foreach (var region in Model.Select(c => c.Region).Distinct())
+                        {
+                            <option value="@region">@region</option>
+                        }
+                    </select>
+                    <button class="btn btn-primary" type="submit">Filter</button>
+                </form>
             </div>
-        </form>
-    </div>
-   
+            <div class="col-md-4"> <a href="Customer/CreateCustomer" class="btn btn-outline-primary">Yeni Müşteri Girişi</a></div>
+        </div>
     <table id="customerTable" class="table table-striped table-bordered">
         <thead>
             <tr>
@@ -48,7 +48,7 @@
             @if(Model==null||!Model.Any()){
                 <p>No Customers found</p>
             }else
-            @foreach (var customer in Model)
+                    @foreach (var customer in Model.OrderBy(c => c.CustomerID))
             {
                 <tr>
                     <td>@customer.CustomerID</td>
@@ -62,6 +62,5 @@
                 </tr>
             }
         </tbody>
-    </table>
-    <a href="Customer/CreateCustomer" class="btn btn-outline-primary">Yeni Müşteri Girişi</a>
+        </table>
 </div>
