--- a/CRMSysteUI/Views/Customer/Search.cshtml
+++ b/CRMSysteUI/Views/Customer/Search.cshtml
@@ -9,29 +9,27 @@
             <button type="submit" class="btn btn-outline-danger">Logout</button>
         </form>
     </div>
-    <div class="row mb-3">
+    <div class="row mb-2">
         <div class="col-md-4">
-            <form method="get" asp-action="Search" asp-controller="Customer">
-                    <input type="text" id="searchInput" class="form-control" placeholder="Search by Customer...">
+            <form method="get" asp-action="Search" asp-controller="Customer" class="d-flex">
+                <input type="text" id="searchInput" class="form-control me-2" placeholder="Search by Customer..." name="name"><br />
+                <button class="btn btn-primary" type="submit">Search</button>
             </form>
         </div>
-        <form method="get" asp-action="SearchRegion" asp-controller="Customer">
-            <div class="col-md-4">
-                <select id="region" class="form-control" name="region">
+        <div class="col-md-4">
+            <form method="get" asp-action="SearchRegion" asp-controller="Customer" class="d-flex">
+                <select id="region" class="form-control me-2" name="region">
                     <option value="">All Regions</option>
                     @foreach (var region in Model.Select(c => c.Region).Distinct())
                     {
                         <option value="@region">@region</option>
                     }
                 </select>
-            </div>
-            <div class="col mb-3">
                 <button class="btn btn-primary" type="submit">Filter</button>
-            </div>
-        </form>
-        
+            </form>
+        </div>
+        <div class="col-md-4"> <a href="Customer/CreateCustomer" class="btn btn-outline-primary">Yeni Müşteri Girişi</a></div>
     </div>
-
     <table id="customerTable" class="table table-striped table-bordered">
         <thead>
             <tr>
@@ -66,7 +64,6 @@
                 }
         </tbody>
     </table>
-    <a href="/CreateCustomer" class="btn btn-outline-primary">Yeni Müşteri Girişi</a>
 </div>
 
 
