--- a/CRMSysteUI/Views/Customer/CreateCustomer.cshtml
+++ b/CRMSysteUI/Views/Customer/CreateCustomer.cshtml
@@ -1,5 +1,5 @@
 ﻿﻿
-@model CustomerDto
+@model CreateCustomerDto
 @{
 	ViewData["Title"] = "Customer Management";
 }
@@ -10,49 +10,43 @@
 				<form method="post">
 					<div class="card">
 						<div class="card-header">
-							<div class="card-title"> Yeni Müşteri Ekle</div>
+							<div class="card-title"> Add New Customer</div>
 						</div>
 						
 						<div class="card-body">
 							<div class="form-group">
-								<label for="firstname">Adınızı giriniz</label>
+								<label for="firstname">Enter Firstname</label>
 								<input type="text" class="form-control" asp-for="FirstName" id="firstname">
+								<span class="text-danger" asp-validation-for="FirstName"></span>
 							</div>
 						</div>
 
 						<div class="card-body">
 							<div class="form-group">
-								<label for="lastname">Soyadınızı Giriniz</label>
+								<label for="lastname">Enter Lastname</label>
 								<input type="text" class="form-control" asp-for="LastName" id="lastname">
-
+								<span class="text-danger" asp-validation-for="LastName"></span>
 							</div>
 
 						</div>
 						<div class="card-body">
 							<div class="form-group">
-								<label for="email">Email giriniz</label>
+								<label for="email">Enter Email</label>
 								<input type="email" class="form-control" asp-for="Email" id="email">
-
+								<span class="text-danger" asp-validation-for="Email"></span>
 							</div>
 
 						</div>
 						<div class="card-body">
 							<div class="form-group">
-								<label for="region">Bölgenizi giriniz</label>
+								<label for="region">Enter Region</label>
 								<input type="text" class="form-control" asp-for="Region" id="region">
-
+								<span class="text-danger" asp-validation-for="Region"></span>
 							</div>
 						</div>
-						@* <div class="card-body">
-							<div class="form-group">
-								<label for="registrationdate">Tarih</label>
-								<input type="date" class="form-control" asp-for="RegistrationDate" id="registrationdate">
-
-							</div>
-						</div>  *@
-
+						
 						<div class="card-action d-flex justify-content-center ">
-							<button class="btn btn-primary">Yeni Kayıt</button>
+							<button class="btn btn-primary">New Registration</button>
 							
 						</div><br />
 					</div>
@@ -62,3 +56,7 @@
 		</div>
 	</div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
