--- a/CRMSysteUI/Views/Customer/SearchRegion.cshtml
+++ b/CRMSysteUI/Views/Customer/SearchRegion.cshtml
@@ -28,7 +28,7 @@
                 <button class="btn btn-primary" type="submit">Filter</button>
             </form>
         </div>
-        <div class="col-md-4"> <a href="Customer/CreateCustomer" class="btn btn-outline-primary">Yeni Müşteri Girişi</a></div>
+        <div class="col-md-4"> <a href="Customer/CreateCustomer" class="btn btn-outline-primary">New Customer Registration</a></div>
     </div>
     <table id="customerTable" class="table table-striped table-bordered">
         <thead>
