--- a/CRMSysteUI/Views/Customer/UpdateCustomer.cshtml
+++ b/CRMSysteUI/Views/Customer/UpdateCustomer.cshtml
@@ -10,42 +10,44 @@
 				<form method="post">
 					<div class="card">
 						<div class="card-header">
-							<div class="card-title"> Müşteri Güncelleme</div>
+							<div class="card-title"> Update Customer</div>
 						</div>
 						<input type="hidden" asp-for="CustomerID" />
 						<div class="card-body">
 							<div class="form-group">
-								<label for="FirstName">Adınızı giriniz</label>
+								<label for="FirstName">Enter Firstname</label>
 								<input type="text" class="form-control" asp-for="FirstName" id="FirstName">
+								<span class="text-danger" asp-validation-for="FirstName"></span>
 							</div>
 						</div>
 
 						<div class="card-body">
 							<div class="form-group">
-								<label for="LastName">Soyadınızı Giriniz</label>
+								<label for="LastName">Enter Lastname</label>
 								<input type="text" class="form-control" asp-for="LastName" id="LastName">
+								<span class="text-danger" asp-validation-for="LastName"></span>
 
 							</div>
 
 						</div>
 						<div class="card-body">
 							<div class="form-group">
-								<label for="Email">Email giriniz</label>
+								<label for="Email">Enter Email</label>
 								<input type="email" class="form-control" asp-for="Email" id="Email">
-
+								<span class="text-danger" asp-validation-for="Email"></span>
 							</div>
 
 						</div>
 						<div class="card-body">
 							<div class="form-group">
-								<label for="Region">Bölgenizi giriniz</label>
+								<label for="Region">Enter Region</label>
 								<input type="text" class="form-control" asp-for="Region" id="Region">
-
+								<span class="text-danger" asp-validation-for="Region"></span>
 							</div>
 
 						</div>
 						<div class="card-action d-flex justify-content-center ">
-							<button class="btn btn-primary">Güncelle</button>
+							<button class="btn btn-primary">Update</button>
 
 						</div><br />
 					</div>
@@ -55,3 +57,7 @@
 		</div>
 	</div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
